--- a/ycaidao/sass/ycaidao.scss
+++ b/ycaidao/sass/ycaidao.scss
@@ -116,7 +116,7 @@ body{
 
 }
 .ycd-gradient-top-bg{
-	background: -webkit-linear-gradient(top,rgba(0,0,0,.6),rgba(0,0,0,0));
+	background: linear-gradient(top,rgba(0,0,0,.6),rgba(0,0,0,0));
 }
 .ycd-header-search-box{
 	position:absolute;
