--- a/ycaidao/css/ycaidao.css
+++ b/ycaidao/css/ycaidao.css
@@ -1,19 +1,21 @@
 html {
   font-size: 20px;
-  color: #999;
+  color: #999999;
   height: 100%;
   width: 100%; }
 
 body {
   width: 100%;
   height: 100%;
-  background: #fff; }
+  background: #fff;
+  overflow-y: scroll;
+  min-height: 101%; }
 
 @font-face {
   font-family: 'iconfont';
   src: url("//at.alicdn.com/t/font_1456476471_9418604.eot");
   /* IE9*/
-  src: url("//at.alicdn.com/t/font_1456476471_9418604.eot?#iefix") format("embedded-opentype"), url("//at.alicdn.com/t/font_1456476471_9418604.woff") format("woff"), url("//at.alicdn.com/t/font_1456476471_9418604.ttf") format("truetype"), url("//at.alicdn.com/t/font_1456476471_9418604.svg#iconfont") format("svg")
+  src: url("//at.alicdn.com/t/font_1456476471_9418604.eot?#iefix") format("embedded-opentype"), url("//at.alicdn.com/t/font_1456476471_9418604.woff") format("woff"), url("//at.alicdn.com/t/font_1456476471_9418604.ttf") format("truetype"), url("//at.alicdn.com/t/font_1456476471_9418604.svg#iconfont") format("svg");
   /* iOS 4.1- */ }
 [class^=ycd-font-icon] {
   display: inline-block;
@@ -35,17 +37,11 @@ body {
   bottom: 0px;
   left: 0px;
   background: #eae9e9;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex; }
 
 .ycd-bottom .ycd-foot-tab {
   display: inline-block;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   height: 100%;
   text-align: center;
   overflow: hidden; }
@@ -54,7 +50,7 @@ body {
   display: inline-block;
   width: 100%;
   height: 100%;
-  color: #999; }
+  color: #999999; }
 
 .ycd-bottom .ycd-foot-tab a.ycd-foot-tab-a-cur {
   color: #1db489; }
@@ -73,35 +69,31 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
   z-index: 99; }
 
 .ycd-header-search-box-top .ycd-location-txt {
   display: inline-block;
-  width: 2.4rem;
+  width: auto;
   height: 1.5rem;
-  line-height: 1rem;
+  line-height: 1.5rem;
   text-align: center;
   font-size: 0.7rem;
   color: #fff;
-  font-weight: 400; }
+  font-weight: 700;
+  padding-right: 0.25rem; }
 
 .ycd-header-search-box-top .ycd-js-search-input-box {
   display: inline-block;
-  height: 100%;
+  height: 1.5rem;
   position: relative;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1; }
+  flex: 1; }
 
 .ycd-js-search-input {
   border-radius: 0.9rem;
   width: 100%;
-  line-height: 0.9rem;
+  height: 1.5rem;
+  line-height: 1.5rem;
   padding: 0.15rem 0.5rem;
   font-size: 0.6rem;
   position: relative; }
@@ -109,11 +101,10 @@ body {
 .ycd-js-search-icon {
   position: absolute;
   font-size: 0.7rem;
-  top: 0.2rem;
+  top: 50%;
   right: 0.55rem; }
 
 .ycd-gradient-top-bg {
-  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.6), transparent);
   background: linear-gradient(top, rgba(0, 0, 0, 0.6), transparent); }
 
 .ycd-header-search-box {
@@ -126,14 +117,8 @@ body {
   width: calc(100% -1.75rem);
   padding: 1.6rem 1.75rem;
   height: 7.1rem;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
+  justify-content: center; }
 
 .ycd-index-categry-list .ycd-index-categry-item {
   width: 5.6rem;
@@ -191,9 +176,6 @@ body {
   padding: 0.9rem;
   width: calc(100% - 1.8rem);
   height: auto;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex; }
 
 .ycd-floor-goods-area img {
