--- a/ycaidao/sass/ycaidao.scss
+++ b/ycaidao/sass/ycaidao.scss
@@ -12,6 +12,8 @@ body{
 	width:100%;
 	height:100%;
 	background: #fff;
+	overflow-y:scroll;
+	min-height: 101%;
 }
 @function pxTorem($px) {
 	
@@ -86,24 +88,26 @@ body{
 }
 .ycd-header-search-box-top .ycd-location-txt{
 	display: inline-block;
-	width:pxTorem(48px);
+	width:auto;
 	height:pxTorem(30px);
-	line-height: pxTorem(20px);
+	line-height: pxTorem(30px);
 	text-align: center;
 	font-size:pxTorem(14px);
 	color:#fff;
-	font-weight: 400;
+	font-weight: 700;
+	padding-right:pxTorem(5px);
 }
 .ycd-header-search-box-top .ycd-js-search-input-box{
 	display: inline-block;
-	height:100%;
+	height:pxTorem(30px);
 	position: relative;
 	flex:1;
 }
 .ycd-js-search-input{
     border-radius: pxTorem(18px);
     width:100%;
-    line-height:pxTorem(18px);
+    height:pxTorem(30px);
+    line-height:pxTorem(30px);
     padding:pxTorem(3px) pxTorem(10px);
     font-size:pxTorem(12px);
     position: relative;
@@ -111,7 +115,7 @@ body{
 .ycd-js-search-icon{
    position:absolute;
    font-size:pxTorem(14px);
-   top:pxTorem(4px);
+   top:50%;
    right:pxTorem(11px);
 
 }
