--- a/ycaidao/sass/ycaidao.scss
+++ b/ycaidao/sass/ycaidao.scss
@@ -16,17 +16,16 @@ body{
 	min-height: 101%;
 }
 @function pxTorem($px) {
-	
 	@return $px / $browser-default-font-size *1rem;
 }
 
 @font-face {
   font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1456476471_9418604.eot'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_1456476471_9418604.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_1456476471_9418604.woff') format('woff'), /* chrome、firefox */
-  url('//at.alicdn.com/t/font_1456476471_9418604.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_1456476471_9418604.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('http://at.alicdn.com/t/font_1456476471_9418604.eot'); /* IE9*/
+  src: url('http://at.alicdn.com/t/font_1456476471_9418604.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('http://at.alicdn.com/t/font_1456476471_9418604.woff') format('woff'), /* chrome、firefox */
+  url('http://at.alicdn.com/t/font_1456476471_9418604.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('http://at.alicdn.com/t/font_1456476471_9418604.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
                     
 [class ^= ycd-font-icon]{
