--- a/ycaidao/sass/gloabal.scss
+++ b/ycaidao/sass/gloabal.scss
@@ -21,5 +21,6 @@ input:focus{outline: none;}
 input,option,select{box-sizing:border-box;}
 .l{float:left;}
 .r{float:right;}
+.hidden{display:none;}
 
 
