--- a/ycaidao/css/ycaidao.css
+++ b/ycaidao/css/ycaidao.css
@@ -295,5 +295,101 @@ body {
     background: rgba(0, 0, 0, 0.2); }
   100% {
     background: rgba(33, 179, 135, 0.8); } }
+.ycd-btn {
+  display: inline-block;
+  border-radius: 0.25rem;
+  border: 1px solid #fff;
+  padding: 0.25rem;
+  color: #fff;
+  height: 1rem;
+  line-height: 1rem;
+  -webkit-transition: background .2s linear;
+          transition: background .2s linear;
+  min-width: 2rem;
+  font-size: 0.6rem; }
+  .ycd-btn:hover {
+    background: rgba(255, 255, 255, 0.3); }
+
+.ycd-btn-search-btn {
+  padding: 0.25rem 1.8rem;
+  margin-left: 0.25rem; }
+
+.ycd-btn-clear-history {
+  background: #e4e4e4;
+  padding: 0.25rem 0.5rem;
+  color: #8a8a8a;
+  border: none; }
+
+.ycd-header-search-box {
+  height: 1.75rem;
+  padding: 0.3rem 0.4rem;
+  width: calc(100% - 0.8rem);
+  background: #21b387;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  top: 0; }
+  .ycd-header-search-box input[type=text].ycd-header-search-box-input {
+    border-radius: 0.25rem;
+    width: 14.95rem;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    padding: 0.35rem 0.35rem;
+    font-size: 0.6rem;
+    position: relative;
+    background: #fff;
+    color: #c4c4c4;
+    border: 1px solid #90d9c3;
+    display: inline-block;
+    box-sizing: content-box; }
+  .ycd-header-search-box .ycd-header-search-return {
+    display: inline-block;
+    width: 4.25rem;
+    height: 1.75rem;
+    line-height: 1.75rem;
+    color: #fff;
+    font-size: 0.6rem; }
+
+.ycd-header-search-container {
+  width: calc(100% - 2.1rem);
+  padding: 0 1.05rem;
+  min-height: 1.75rem;
+  position: absolute;
+  top: 2.35rem;
+  background: #fff;
+  height: 100%; }
+  .ycd-header-search-container h2 {
+    width: 100%;
+    height: 1.1rem;
+    line-height: 1.1rem;
+    margin-top: 0.5rem;
+    border-bottom: 2px solid #efefef;
+    padding-bottom: 0.25rem;
+    font-size: 0.7rem; }
+  .ycd-header-search-container .ycd-header-search-tags {
+    padding: 0.25rem 0; }
+  .ycd-header-search-container .ycd-header-search-tags a {
+    display: inline-block;
+    border-radius: 0.25rem;
+    border: 1px solid #b6b6b6;
+    padding: 0.25rem 0.75rem;
+    color: #b6b6b6;
+    height: 1rem;
+    line-height: 1rem;
+    font-size: 0.6rem;
+    -webkit-transition: background .2s linear;
+            transition: background .2s linear;
+    margin-left: 0.25rem; }
+    .ycd-header-search-container .ycd-header-search-tags a:hover {
+      background: rgba(0, 0, 0, 0.3);
+      color: #fff; }
+  .ycd-header-search-container .ycd-header-search-content {
+    width: 100%;
+    text-align: center; }
+
+.ycd-header-search-result {
+  width: 100%;
+  height: auto; }
 
 /*# sourceMappingURL=ycaidao.css.map */
