--- a/ycaidao2/sass/gloabal.scss
+++ b/ycaidao2/sass/gloabal.scss
@@ -23,5 +23,6 @@ input,option,select{box-sizing:border-box;}
 .r{float:right;}
 .hidden{display:none;}
 .tc{text-align: center;}
+.inline-block{display:inline-block;}
 
 
