--- a/ycaidao2/css/category.css
+++ b/ycaidao2/css/category.css
@@ -2,9 +2,6 @@
   background: rgba(85, 165, 51, 0.8); }
   .ycd-header-search-box-top .ycd-js-search-input-box {
     margin: 0;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex; }
   .ycd-header-search-box-top .ycd-js-search-input {
     width: 29.1rem; }
@@ -47,10 +44,7 @@
   background: #fff; }
 
 .yc-swiper-right-list-content {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1; }
+  flex: 1; }
   .yc-swiper-right-list-content .yc-swiper-right-list-item {
     width: 100%;
     height: 9.75rem;
@@ -102,9 +96,6 @@
       height: 2rem;
       right: 1.25rem;
       top: 5.5rem;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
       display: flex; }
       .yc-swiper-right-list-content .yc-swiper-right-list-item .cart-operation span {
         display: inline-block;
@@ -121,16 +112,42 @@
         .yc-swiper-right-list-content .yc-swiper-right-list-item .cart-operation span.cut:active, .yc-swiper-right-list-content .yc-swiper-right-list-item .cart-operation span.increse:active {
           background: #55a533;
           color: #fff; }
-      .yc-swiper-right-list-content .yc-swiper-right-list-item .cart-operation span.amount {
+      .yc-swiper-right-list-content .yc-swiper-right-list-item .cart-operation input.amount {
         font-size: 1rem;
         color: #55a533;
         line-height: 2rem;
-        padding: 0 0.6rem; }
+        padding: 0 0.6rem;
+        text-align: center;
+        border: none; }
 
 #swiper-container3 .swiper-slide {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex; }
+
+.ycd-bottom-cart-info {
+  display: flex;
+  position: fixed;
+  bottom: 5.5rem;
+  left: 0;
+  width: 100%;
+  height: 4.5rem;
+  line-height: 4.5rem;
+  color: #eb2d29;
+  font-size: 1.2rem;
+  z-index: 99;
+  background: #fff;
+  border-top: 1px solid #dedede; }
+  .ycd-bottom-cart-info .cart-info-total {
+    flex: 1;
+    height: 100%;
+    text-indent: 1.2rem; }
+    .ycd-bottom-cart-info .cart-info-total a {
+      color: #eb2d29;
+      display: inline-block; }
+  .ycd-bottom-cart-info .cart-info-checkout {
+    width: 8rem;
+    height: 4.5rem;
+    background: #eb2d29;
+    color: #fff;
+    text-align: center; }
 
 /*# sourceMappingURL=category.css.map */
