--- a/ycaidao2/sass/ycaidao.scss
+++ b/ycaidao2/sass/ycaidao.scss
@@ -598,6 +598,9 @@ body{
            font-size:pxTorem(32px);
            margin-left:pxTorem(24px);
         }
+        dt.ycd-light-green{
+          color:#55a533;
+        }
         dd{
            flex:1;
            text-align: right;
@@ -610,6 +613,9 @@ body{
           font-size:pxTorem(30px);
           line-height: pxTorem(86px);
         }
+     }
+     a.ycd-light-green{
+      color:#55a533;
      }
   }
   dl:last-child{
